<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.a4.acesmndr.attendance.FAQ" android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/subTitle"
        android:text="@string/faq_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@android:color/holo_blue_light"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:background="@drawable/card"
                android:text="@string/faq1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="15dp"
                android:layout_margin="2dp"/>
            <TextView
                android:background="@drawable/card"
                android:text="@string/faq2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="15dp"
                android:layout_margin="2dp"/>
            <TextView
                android:background="@drawable/card"
                android:text="@string/faq3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="15dp"
                android:layout_margin="2dp"/>
            <TextView
                android:background="@drawable/card"
                android:text="@string/faq4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="15dp"
                android:layout_margin="2dp"/>
            <TextView
                android:background="@drawable/card"
                android:text="@string/faq5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="15dp"
                android:layout_margin="2dp"/>
            <TextView
                android:background="@drawable/card"
                android:text="@string/faq6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="15dp"
                android:layout_margin="2dp"/>
            <TextView
                android:background="@drawable/card"
                android:text="@string/faq7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="15dp"
                android:layout_margin="2dp"/>
            <TextView
                android:background="@drawable/card"
                android:text="@string/faq8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:padding="15dp"
                android:layout_margin="2dp"/>
        </LinearLayout>



    </ScrollView>



</LinearLayout>
