<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.a4.acesmndr.attendance.AboutUs">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left|top"
        android:weightSum="1"
        android:textAlignment="center"
        android:id="@+id/layoutLinear"
        android:background="#E3F2FD">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:id="@+id/textView5"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@color/accent_material_dark"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/imageView"
            android:src="@drawable/attendance_logo"
            android:layout_weight="0.34"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developers"
            android:id="@+id/developerSwitch"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:background="#D32F2F"
            android:paddingLeft="20dp"
            android:textColor="@android:color/white"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:phoneNumber="false"
            android:nestedScrollingEnabled="false"
            android:autoText="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/developers_name"
            android:id="@+id/developerDisplay"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:background="#F44336"
            android:paddingLeft="20dp"
            android:textColor="@android:color/white"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:visibility="gone" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/queries"
            android:id="@+id/queries"
            android:layout_weight="0.18"
            android:background="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0091EA" />


    </LinearLayout>
</FrameLayout>
