<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.a4.acesmndr.attendance.Attend">

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="114dp"
        android:progressTint="#03A9F4" />



    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:id="@+id/linearLayout">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/present"
        android:id="@+id/present"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:background="#0091EA"
        android:textColor="@android:color/white"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:paddingBottom="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/absent"
        android:id="@+id/absent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:background="#D32F2F"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:paddingBottom="20dp"
        android:layout_weight="1"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/seekBar2"
        android:layout_alignEnd="@+id/seekBar2"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/seekBar2"
        android:layout_alignStart="@+id/seekBar2"
        android:layout_above="@+id/seekBar2"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roll"
            android:id="@+id/rollDisplay"
            android:textSize="100sp"
            android:layout_gravity="center"
             />



        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/daysPresent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@color/accent_material_dark"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>


    </FrameLayout>


</RelativeLayout>
